Fix dialog close button on Safari (it was too narrow)

--- a/ova/static/css/imports/people.css
+++ b/ova/static/css/imports/people.css
@@ -107,6 +107,7 @@ body:has(.people dialog[open]) {
   margin-inline: auto;
   padding: .6rem;
   position: fixed;
+  width: fit-content;
   z-index: 1;
 }
 
